fix bug: problems with displaying <tr onmouseover="this.background.color=...">

BUG:70326
BUG:57605

Allan claims this is the 3rd most "popular" khtml bug.

svn path=/trunk/kdelibs/; revision=374337