khtml/rendering/render_table.h
@@ -227,6 +227,8 @@ public:
 
     virtual short lineHeight(bool) const { return 0; }
     virtual void position(InlineBox*, int, int, bool) {}
+	
+	virtual short width() const;
 
     virtual FindSelectionResult checkSelectionPoint( int _x, int _y, int _tx, int _ty,
                                                      DOM::NodeImpl*& node, int & offset,
@@ -278,7 +280,7 @@ public:
     signed short cRow : 16;
     ushort cCol : 15;
     bool needCellRecalc : 1;
-
+	
     void recalcCells();
 protected:
     void ensureRows( int numRows );
